"Step 6": Completado sin errores ✅

--- a/SmartControls/webapp/view/ChartContainer.view.xml
+++ b/SmartControls/webapp/view/ChartContainer.view.xml
@@ -1,16 +1,64 @@
 <mvc:View
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m"
-	xmlns:l="sap.ui.layout">
-	<Page
-		title="{i18n>chartContainerPageTitle}"
-		backgroundDesign="Solid">
-		<content>
-			<l:Grid defaultSpan="L12 M12 S12"
-				class="sapUiResponsiveMargin"
-				vSpacing="0"
-				hSpacing="0">
-			</l:Grid>
-		</content>
-	</Page>
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:suite="sap.suite.ui.commons"
+    xmlns:core="sap.ui.core"
+    xmlns="sap.m"
+    xmlns:l="sap.ui.layout"
+    controllerName="sap.suite.ui.commons.demokit.tutorial.icecream.01.controller.ChartContainer">
+    <Page
+        title="{i18n>chartContainerPageTitle}"
+        showNavButton="true"
+        navButtonPress=".onNavButtonPressed"
+        backgroundDesign="Solid">
+        <content>
+            <l:Grid defaultSpan="L12 M12 S12" class="sapUiResponsiveMargin" vSpacing="0" hSpacing="0">
+               <suite:ChartContainer
+                        title="{
+                            parts: [
+                                'i18n>chartContainerBulletChartTitle',
+                                'business>/temperatureUnit'
+                            ],
+                            formatter: '.formatMessage'
+                        }">
+                    <suite:ChartContainerContent
+                        icon="sap-icon://vertical-bullet-chart"
+                        title="{i18n>chartContainerBulletChartContentTitle}">
+                        <suite:content>
+                            <core:Fragment
+                                fragmentName="sap.suite.ui.commons.demokit.tutorial.icecream.01.fragment.VizChart"
+                                type="JS" />
+                        </suite:content>
+                    </suite:ChartContainerContent>
+                    <suite:ChartContainerContent
+                        icon="sap-icon://table-chart"
+                        title="{i18n>chartContainerTableContentTitle}">
+                        <suite:content>
+                            <Table items="{/Temperatures}">
+                                <columns>
+                                    <Column>
+                                        <Text text="{i18n>chartContainerIceCreamId}" />
+                                    </Column>
+                                    <Column>
+                                        <Text text="{i18n>chartContainerTemperature}" />
+                                    </Column>
+                                    <Column>
+                                        <Text text="{i18n>chartContainerTargetTemperature}" />
+                                    </Column>
+                                </columns>
+                                <items>
+                                    <ColumnListItem>
+                                        <cells>
+                                            <Text text="{id}" />
+                                            <Text text="{temperature}" />
+                                            <Text text="{target}" />
+                                        </cells>
+                                    </ColumnListItem>
+                                </items>
+                            </Table>
+                        </suite:content>
+                    </suite:ChartContainerContent> 
+                </suite:ChartContainer> 
+            </l:Grid>
+        </content>
+    </Page>
 </mvc:View>
