"Step 7": Completado sin errores ✅

--- a/SmartControls/webapp/view/ProcessFlow.view.xml
+++ b/SmartControls/webapp/view/ProcessFlow.view.xml
@@ -1,8 +1,46 @@
 <mvc:View
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m">
-	<Page
+	xmlns="sap.suite.ui.commons"
+	xmlns:m="sap.m"
+	xmlns:mc="sap.suite.ui.microchart"
+	controllerName="sap.suite.ui.commons.demokit.tutorial.icecream.01.controller.ProcessFlow">
+	<m:Page
 		title="{i18n>processFlowTitle}"
+		showNavButton="true"
+		navButtonPress=".onNavButtonPressed"
 		backgroundDesign="Solid">
-	</Page>
+		<m:content>
+			<m:ObjectHeader
+				responsive="true"
+				title="{
+					parts: [
+						'i18n>processFlowChartsTitle',
+						'business>/year'
+					],
+					formatter: '.formatMessage'
+				}">
+				<m:headerContainer>
+					<m:HeaderContainer
+						scrollStep="200"
+						scrollTime="500"
+						showDividers="true"
+						class="sapUiSmallMargin">
+						<m:FlexBox
+							width="12rem"
+							height="10rem"
+							alignItems="Center"
+							justifyContent="Center"
+							direction="Column">
+							<m:Title
+								text="{i18n>processFlowChartsShareOwnProduction}"
+								class="sapUiSmallMargin"/>
+							<m:FlexBox width="6rem" height="6rem">
+								<mc:RadialMicroChart percentage="{business>/shareOwnProduction}"/>
+							</m:FlexBox>
+						</m:FlexBox>
+					</m:HeaderContainer>
+				</m:headerContainer>
+			</m:ObjectHeader>
+		</m:content>
+	</m:Page>
 </mvc:View>
