"Step 8": Completado sin errores ✅

--- a/SmartControls/webapp/view/ProcessFlow.view.xml
+++ b/SmartControls/webapp/view/ProcessFlow.view.xml
@@ -38,6 +38,36 @@
 								<mc:RadialMicroChart percentage="{business>/shareOwnProduction}"/>
 							</m:FlexBox>
 						</m:FlexBox>
+						<m:FlexBox
+	                    width="16rem"
+	                    height="10rem"
+	                    alignItems="Center"
+	                    justifyContent="Center"
+	                    direction="Column">
+		                    <m:Title
+		                        text="{
+		                            parts: [
+		                                'i18n>processFlowChartsDeliveryTimeComparison',
+		                                'suppliers>/timeMeasure'
+		                            ],
+		                            formatter: '.formatMessage'
+		                        }"
+		                        class="sapUiSmallMargin" />
+		                    <m:FlexBox width="16rem" height="6rem" renderType="Bare">
+		                        <mc:ComparisonMicroChart
+		                            size="Responsive"
+		                            press=".press"
+		                            data="{suppliers>/Suppliers}">
+		                            <mc:data>
+		                                <mc:ComparisonMicroChartData
+		                                    title="{suppliers>id}"
+		                                    value="{suppliers>deliveryTime}"
+		                                    displayValue="{suppliers>deliveryTime}"
+		                                    color="{suppliers>deliveryTimeSemantics}" />
+		                            </mc:data>
+		                        </mc:ComparisonMicroChart>
+		                    </m:FlexBox>
+	                	</m:FlexBox>
 					</m:HeaderContainer>
 				</m:headerContainer>
 			</m:ObjectHeader>
