"Step 9": Completado sin errores ✅

--- a/SmartControls/webapp/view/ProcessFlow.view.xml
+++ b/SmartControls/webapp/view/ProcessFlow.view.xml
@@ -39,35 +39,70 @@
 							</m:FlexBox>
 						</m:FlexBox>
 						<m:FlexBox
-	                    width="16rem"
-	                    height="10rem"
-	                    alignItems="Center"
-	                    justifyContent="Center"
-	                    direction="Column">
-		                    <m:Title
-		                        text="{
-		                            parts: [
-		                                'i18n>processFlowChartsDeliveryTimeComparison',
-		                                'suppliers>/timeMeasure'
-		                            ],
-		                            formatter: '.formatMessage'
-		                        }"
-		                        class="sapUiSmallMargin" />
-		                    <m:FlexBox width="16rem" height="6rem" renderType="Bare">
-		                        <mc:ComparisonMicroChart
-		                            size="Responsive"
-		                            press=".press"
-		                            data="{suppliers>/Suppliers}">
-		                            <mc:data>
-		                                <mc:ComparisonMicroChartData
-		                                    title="{suppliers>id}"
-		                                    value="{suppliers>deliveryTime}"
-		                                    displayValue="{suppliers>deliveryTime}"
-		                                    color="{suppliers>deliveryTimeSemantics}" />
-		                            </mc:data>
-		                        </mc:ComparisonMicroChart>
-		                    </m:FlexBox>
-	                	</m:FlexBox>
+							width="16rem"
+							height="10rem"
+							alignItems="Center"
+							justifyContent="Center"
+							direction="Column">
+							<m:Title
+								text="{
+									parts: [
+									'i18n>processFlowChartsDeliveryTimeComparison',
+									'suppliers>/timeMeasure'
+								],
+								formatter: '.formatMessage'
+								}"
+								class="sapUiSmallMargin"/>
+							<m:FlexBox width="16rem" height="6rem" renderType="Bare">
+								<mc:ComparisonMicroChart
+									size="Responsive"
+									press=".press"
+									data="{suppliers>/Suppliers}">
+									<mc:data>
+										<mc:ComparisonMicroChartData
+											title="{suppliers>id}"
+											value="{suppliers>deliveryTime}"
+											displayValue="{suppliers>deliveryTime}"
+											color="{suppliers>deliveryTimeSemantics}"/>
+									</mc:data>
+								</mc:ComparisonMicroChart>
+							</m:FlexBox>
+						</m:FlexBox>
+						<m:FlexBox
+							width="12rem"
+							height="10rem"
+							alignItems="Center"
+							justifyContent="Center"
+							direction="Column">
+							<m:Title
+								text="{
+									parts: [
+									'i18n>processFlowChartsProductionTime',
+									'business>/timeMeasure'
+									],
+									formatter: '.formatMessage'
+								}"
+								class="sapUiSmallMargin"/>
+							<m:FlexBox width="12rem" height="6rem" renderType="Bare">
+								<mc:DeltaMicroChart
+									size="Responsive"
+									color="{business>/productionTimeComparisonCriticality}"
+									value1="{business>/expectedProductionTime}"
+									value2="{business>/currentProductionTime}"
+									title1="{i18n>processFlowChartsExpected}"
+									title2="{i18n>processFlowChartsCurrent}"
+									displayValue1="{business>/expectedProductionTime}"
+									displayValue2="{business>/currentProductionTime}"
+									deltaDisplayValue="{
+										parts: [
+										'business>/expectedProductionTime',
+										'business>/currentProductionTime'
+										],
+										formatter: '.getValuesDelta'
+									}"
+								/>
+							</m:FlexBox>
+						</m:FlexBox>
 					</m:HeaderContainer>
 				</m:headerContainer>
 			</m:ObjectHeader>
