--- a/Odata.V4/webapp/view/App.view.xml
+++ b/Odata.V4/webapp/view/App.view.xml
@@ -4,7 +4,25 @@
 	xmlns="sap.m">
 	<App id="_IDEGen_app0">
 		<pages>
-			
+			<Page id="_IDEGen_page0" title="{i18n>title}">
+				<content>
+					<Table id="_IDEGen_table0" items="{/TextosGeneralesSet}" growing="true" growingScrollToLoad="true">
+						<columns>
+							<Column id="_IDEGen_column0">
+								<header>
+									<Label id="_IDEGen_label0" text="Texto"/>
+								</header>
+							</Column>
+						</columns>
+						<ColumnListItem id="_IDEGen_columnlistitem0">
+							<cells>
+								<Text id="_IDEGen_text0" text="{Texto}" maxLines="2"></Text>
+							</cells>
+						</ColumnListItem>
+					</Table>
+				<Text id="_IDEGen_text1" text="Total de líneas: {datosVarios>/num_lineas}"/>
+				</content>
+			</Page>
 		</pages>
 	</App>
 </mvc:View>
